--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "admin",
+  "name": "deliver",
   "version": "1.1.1",
-  "description": "admin: An Ionic project",
+  "description": "deliver: ยักษ์ จับมือ โจร ส่งถึงบ้าน",
   "dependencies": {
     "gulp": "^3.5.6",
     "gulp-sass": "^2.0.4",
