commit issue of push notification

--- a/.io-config.json
+++ b/.io-config.json
@@ -1,1 +1,1 @@
-{"app_id":"0d0e468b","api_key":"4ec6943e52a533302d7f0b79552e8d5bf10715f135f4ebe1","dev_push":false}
+{"app_id":"0d0e468b","api_key":"4ec6943e52a533302d7f0b79552e8d5bf10715f135f4ebe1","dev_push":false,"gcm_key":"816604195373"}
