--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
         "gulp-minify-css": "^0.3.0",
         "gulp-rename": "^1.2.0",
         "gulp-sass": "^2.0.4",
-        "ionic-plugin-keyboard": "^2.2.1"
+        "ionic-plugin-keyboard": "^2.2.1",
+        "phonegap-plugin-push": "^1.10.4"
     },
     "devDependencies": {
         "bower": "^1.3.3",
@@ -49,7 +50,10 @@
             "cordova-plugin-splashscreen": {},
             "cordova-plugin-statusbar": {},
             "cordova-plugin-whitelist": {},
-            "ionic-plugin-keyboard": {}
+            "ionic-plugin-keyboard": {},
+            "phonegap-plugin-push": {
+                "SENDER_ID": "816604195373"
+            }
         },
         "platforms": [
             "ios"
