--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "version": "1.1.1",
     "description": "deliver: ยักษ์ จับมือ โจร ส่งถึงบ้าน",
     "dependencies": {
+        "cordova-android": "^6.2.3",
         "cordova-ios": "^4.4.0",
         "cordova-plugin-compat": "^1.1.0",
         "cordova-plugin-console": "^1.0.7",
@@ -56,6 +57,7 @@
             }
         },
         "platforms": [
+            "android",
             "ios"
         ]
     }
