--- a/package.json
+++ b/package.json
@@ -18,7 +18,10 @@
         "gulp-rename": "^1.2.0",
         "gulp-sass": "^2.0.4",
         "ionic-plugin-keyboard": "^2.2.1",
-        "phonegap-plugin-push": "^1.10.4"
+        "phonegap-plugin-push": "^1.10.4",
+        "cordova-plugin-file": "~4.3.3",
+        "cordova-plugin-file-transfer": "~1.6.3",
+        "cordova-plugin-image-picker": "https://github.com/wymsee/cordova-imagePicker.git"
     },
     "devDependencies": {
         "bower": "^1.3.3",
@@ -54,6 +57,11 @@
             "ionic-plugin-keyboard": {},
             "phonegap-plugin-push": {
                 "SENDER_ID": "816604195373"
+            },
+            "cordova-plugin-file": {},
+            "cordova-plugin-file-transfer": {},
+            "cordova-plugin-image-picker": {
+                "PHOTO_LIBRARY_USAGE_DESCRIPTION": " "
             }
         },
         "platforms": [
