--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
         "cordova-plugin-compat": "^1.1.0",
         "cordova-plugin-console": "^1.0.7",
         "cordova-plugin-device": "^1.1.6",
+        "cordova-plugin-file": "~4.3.3",
+        "cordova-plugin-file-transfer": "~1.6.3",
         "cordova-plugin-geolocation": "^2.4.3",
+        "cordova-plugin-image-picker": "https://github.com/wymsee/cordova-imagePicker.git",
         "cordova-plugin-splashscreen": "^4.0.3",
         "cordova-plugin-statusbar": "^2.2.3",
         "cordova-plugin-whitelist": "^1.3.2",
@@ -18,10 +21,7 @@
         "gulp-rename": "^1.2.0",
         "gulp-sass": "^2.0.4",
         "ionic-plugin-keyboard": "^2.2.1",
-        "phonegap-plugin-push": "^1.10.4",
-        "cordova-plugin-file": "~4.3.3",
-        "cordova-plugin-file-transfer": "~1.6.3",
-        "cordova-plugin-image-picker": "https://github.com/wymsee/cordova-imagePicker.git"
+        "phonegap-plugin-push": "^1.10.4"
     },
     "devDependencies": {
         "bower": "^1.3.3",
